--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "cpp_cuda/includes/pybind11"]
 	path = cpp_cuda/includes/pybind11
 	url = https://github.com/pybind/pybind11.git
+[submodule "cpp_cuda/includes/lapack"]
+	path = cpp_cuda/includes/lapack
+	url = https://github.com/Reference-LAPACK/lapack.git
+[submodule "cpp_cuda/includes/opencv"]
+	path = cpp_cuda/includes/opencv
+	url = https://github.com/opencv/opencv.git
