--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,6 +36,7 @@ ENDIF()
 # THIS LINE SHOULD BE CHANGE DEPENDING ON THE ARCHITECTURE OF THE GPU YOU INTEND TO USE
 #set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} -gencode arch=compute_50,code=sm_50")
 
+set(CMAKE_BUILD_TYPE "Release")
 set(MODULE_SOURCE "${PROJECT_SOURCE_DIR}/src/")
 set(EXTERNALS "${PROJECT_SOURCE_DIR}/ext")
 
